--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue2-custom-input": "^1.0.2",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
